@@ -3,6 +3,11 @@
 changes relative to sbcl-1.4.4:
   * enhancement: FIND-PACKAGE does not acquire a mutex
   * enhancement: cheneygc can perform heap relocation on startup
+  * enhancement: in threaded builds, finalizers execute in a system-internal
+    thread so that a user thread which invokes GC is unblocked from performing
+    work as soon it returns from GC and invokes any post-GC hooks.
+    As such, it is more important than before to avoid assumptions about
+    special variables bindings in finalizers even in single-threaded code.
 
 changes in sbcl-1.4.4 relative to sbcl-1.4.3:
   * bug fix: pathname accessors such as PATHNAME-DIRECTORY work on
